fix header z-index

--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ body{
     justify-content: space-between;
     position: sticky;
     top: 0;
-    z-index: 3;
+    z-index: 1500;
 }
 
 .header__nav{
